--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ a:focus{
 #sidebar{
     min-width: 250px;
     max-width: 250px;
-    background:grey;
-    color: #fff;
+    background:rgb(110, 110, 110,0.5);
+    color:black;
     transition: all 0.3s;
 }
 #sidebar.active{
@@ -31,7 +31,7 @@ a:focus{
 }
 #sidebar .sidebar-header{
     padding: 20px;
-    background: #6d7fcc;
+    background: #474747;
 }
 #sidebar ul.components{
     padding: 20px 0;
@@ -47,14 +47,14 @@ a:focus{
     display: block;
 }
 #sidebar ul li a:hover{
-    color: #7386D5;
+    color: #444444;
     background: #fff;
     text-decoration: none;
 }
 #sidebar ul li.active>a,
 a[arial-expanded="true"]{
     color: #fff;
-    background: #6d7fcc;
+    background: #575757;
 }
 a[data-toggle="collapse"]{
     position: relative;
@@ -69,7 +69,7 @@ a[data-toggle="collapse"]{
 ul ul a{
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #fffdfd;
 
 }
 #content{
