--- a/style.css
+++ b/style.css
@@ -72,6 +72,11 @@ ul ul a{
     background: #fffdfd;
 
 }
+#sidebarCollapse{
+    background: none;
+    color: #444444;
+    border: none;
+}
 #content{
     width: 100%;
     padding: 20px;
