--- a/style.css
+++ b/style.css
@@ -95,4 +95,80 @@ ul ul a{
     }
 }
 
+/* login page */
+body {font-family: Arial, Helvetica, sans-serif;}
+form {border: 3px solid #f1f1f1;}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color:rgb(190, 173, 255);
+  border-radius: 15px 50px 30px;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: rgb(190, 173, 255);
+  cursor: pointer;
+  width: 100%;
+  text-decoration: none;
+}
+
+button:hover {
+  opacity: 0.8;
+  text-decoration: none;
+}
+
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
+/* home page */
+.middle{
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.btn{
+    position: relative;
+    display: block;
+    color:gray;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    margin: 30px 0;
+    border: 2px solid #ff7675;
+    padding: 14px 60px;
+    text-transform: uppercase;
+}
+
+
 
