--- a/teststyle.css
+++ b/teststyle.css
@@ -106,6 +106,8 @@
         transition: all 300ms ease-in-out 400ms;
       }
 
+
+      /* login page */
       .container {
         position: relative;
         width: 100%;
@@ -437,6 +439,37 @@
           transform: translate(-50%, 0);
         }
       }
+      
+      .forgot {
+        text-decoration: none;
+        color: #aaa;
+        transition: 0.5s ease-in-out;
+      }
+      .forgot:hover {
+        color:rgb(215, 77, 250);
+      }
+      .goHome {
+        width: 150px;
+        background-color: rgb(242, 188, 255);
+        border: none;
+        outline: none;
+        height: 49px;
+        border-radius: 49px;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin: 10px 0;
+        cursor: pointer;
+        transition: 0.5s;
+        text-align: center;
+        padding-top: 15px;
+        text-decoration: none;
+      }
+      
+      .goHome:hover {
+        background-color:rgb(233, 145, 255);
+      }
+   
       
       @media (max-width: 570px) {
         form {
