--- a/teststyle.css
+++ b/teststyle.css
@@ -31,7 +31,9 @@
         margin: 4px 2px;
         border-radius: 12px;
         color: ghostwhite;
+        transition: 0.5s ease-in-out;
       }
+
       .popup {
         width: 350px;
         height: 280px;
@@ -518,3 +520,4 @@
   width: 0px;
   transition: 1s ease;
 }
+
