--- a/teststyle.css
+++ b/teststyle.css
@@ -532,3 +532,50 @@
 .stopwatch-buttons{
   text-align: center;
 }
+
+#message{ 
+  align-items: right ;
+  color: pink;
+}
+#messages{
+  align-items: right;
+  color: green;
+
+  margin-left: 50px;
+}
+
+
+
+
+.messagebox{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", "sans-serif";
+
+}
+
+#chat-room{ 
+  background-color: blue ;
+  text-align: center;
+  padding: 15px;
+}
+
+#textbox{
+  position: absolute;
+  bottom: 10px;
+  left:25%;
+
+}
+
+.send-button{
+  border: none;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  left: 100%;
+}
+
+
+
