--- a/teststyle.css
+++ b/teststyle.css
@@ -110,7 +110,7 @@
 
 
       /* login page */
-      .container {
+      #container {
         position: relative;
         width: 100%;
         background-color: #fff;
@@ -229,7 +229,7 @@
         grid-template-columns: repeat(2, 1fr);
       }
       
-      .container:before {
+      #container:before {
         content: "";
         position: absolute;
         height: 2000px;
@@ -302,45 +302,45 @@
       
       /* ANIMATION */
       
-      .container.sign-up-mode:before {
+      #container.sign-up-mode:before {
         transform: translate(100%, -50%);
         right: 52%;
       }
       
-      .container.sign-up-mode .left-panel .image,
-      .container.sign-up-mode .left-panel .content {
+      #container.sign-up-mode .left-panel .image,
+      #container.sign-up-mode .left-panel .content {
         transform: translateX(-800px);
       }
       
-      .container.sign-up-mode .signin-signup {
+      #container.sign-up-mode .signin-signup {
         left: 25%;
       }
       
-      .container.sign-up-mode form.sign-up-form {
+      #container.sign-up-mode form.sign-up-form {
         opacity: 1;
         z-index: 2;
       }
       
-      .container.sign-up-mode form.sign-in-form {
+      #container.sign-up-mode form.sign-in-form {
         opacity: 0;
         z-index: 1;
       }
       
-      .container.sign-up-mode .right-panel .image,
-      .container.sign-up-mode .right-panel .content {
+      #container.sign-up-mode .right-panel .image,
+      #container.sign-up-mode .right-panel .content {
         transform: translateX(0%);
       }
       
-      .container.sign-up-mode .left-panel {
+      #container.sign-up-mode .left-panel {
         pointer-events: none;
       }
       
-      .container.sign-up-mode .right-panel {
+      #container.sign-up-mode .right-panel {
         pointer-events: all;
       }
       
       @media (max-width: 870px) {
-        .container {
+        #container {
           min-height: 800px;
           height: 100vh;
         }
@@ -352,7 +352,7 @@
         }
       
         .signin-signup,
-        .container.sign-up-mode .signin-signup {
+        #container.sign-up-mode .signin-signup {
           left: 50%;
         }
       
@@ -404,7 +404,7 @@
           font-size: 0.7rem;
         }
       
-        .container:before {
+        #container:before {
           width: 1500px;
           height: 1500px;
           transform: translateX(-50%);
@@ -415,19 +415,19 @@
           transition: 2s ease-in-out;
         }
       
-        .container.sign-up-mode:before {
+        #container.sign-up-mode:before {
           transform: translate(-50%, 100%);
           bottom: 32%;
           right: initial;
         }
       
-        .container.sign-up-mode .left-panel .image,
-        .container.sign-up-mode .left-panel .content {
+        #container.sign-up-mode .left-panel .image,
+        #container.sign-up-mode .left-panel .content {
           transform: translateY(-300px);
         }
       
-        .container.sign-up-mode .right-panel .image,
-        .container.sign-up-mode .right-panel .content {
+        #container.sign-up-mode .right-panel .image,
+        #container.sign-up-mode .right-panel .content {
           transform: translateY(0px);
         }
       
@@ -436,7 +436,7 @@
           transform: translateY(300px);
         }
       
-        .container.sign-up-mode .signin-signup {
+        #container.sign-up-mode .signin-signup {
           top: 5%;
           transform: translate(-50%, 0);
         }
@@ -484,16 +484,16 @@
         .panel .content {
           padding: 0.5rem 1rem;
         }
-        .container {
+        #container {
           padding: 1.5rem;
         }
       
-        .container:before {
+        #container:before {
           bottom: 72%;
           left: 50%;
         }
       
-        .container.sign-up-mode:before {
+        #container.sign-up-mode:before {
           bottom: 28%;
           left: 50%;
         }
@@ -561,21 +561,7 @@
   padding: 15px;
 }
 
-#textbox{
-  position: absolute;
-  bottom: 10px;
-  left:25%;
 
-}
-
-.send-button{
-  border: none;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  position: absolute;
-  left: 100%;
-}
 
 
 
