--- a/teststyle.css
+++ b/teststyle.css
@@ -1,6 +1,8 @@
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 /* nav bar */
-
+body{
+  text-decoration: none;
+}
 ul{
     list-style: none;
 }
@@ -447,101 +449,6 @@ section{
         padding-bottom: 50px;
       }
 
-      /* pop up button */
-      .center {
-        position: absolute;
-        top: 115%;
-        left: 50%;
-        padding-bottom: 5px;
-        transform: translate(-50%,-50%);
-      }
-      #open-popup-btn{
-        background-color: rgb(242, 188, 255);
-        border: none;
-        padding: 16px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        border-radius: 12px;
-        color: ghostwhite;
-        transition: 0.5s ease-in-out;
-      }
-
-      .popup {
-        width: 350px;
-        height: 280px;
-        padding: 30px 20px;
-        background-color: #f5f5f5;
-        border: gray;
-        border-radius: 10px;
-        box-sizing: border-box;
-        z-index: 2;
-        text-align: center;
-        opacity: 0;
-        top: -200%;
-        transform: translate(-50%,-50%) scale(0.5);
-        transition: opacity 300ms ease-in-out,
-                    top 1000ms ease-in-out,
-                    transform 1000ms ease-in-out;
-      }
-      .popup.active{
-        opacity: 1;
-        top: 50%;
-        transform: translate(-50%,-50%) scale(1);
-        transition: transform 300ms cubic-bezier(0.18,0.89,0.43,1.19);
-      }
-      .popup .title {
-        margin: 5px 0px;
-        font-size: 30px;
-        font-weight: 600;
-      }
-      .popup .description{
-        color:#222;
-        font-size: 15px;
-        padding: 5px;
-      }
-      .popup .dismiss-btn {
-        margin-top: 15px;
-      }
-      .popup .dismiss-btn button {
-        padding: 10px 20px;
-        background-color: rgb(242, 188, 255);
-        color: #f5f5f5;
-        border: rgb(242, 188, 255);
-        font-size: 16px;
-        font-weight: 600;
-        outline: none;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: all 300ms ease-in-out;
-      }
-      .popup .dismiss-btn button:hover {
-        color: #111;
-        background-color: #f5f5f5;
-      }
-      .popup > div {
-        position: relative;
-        top: 10px;
-        opacity: 0;
-      }
-      .popup.popup.active > div {
-        top: 0px;
-        opacity: 1;
-      }
-      .popup.popup.active .icon {
-        transition: all 300ms ease-in-out 250ms;
-      }
-      .popup.popup.active .title {
-        transition: all 300ms ease-in-out 300ms;
-      }
-      .popup.popup.active .description {
-        transition: all 300ms ease-in-out 350ms;
-      }
-      .popup.popup.active .dismiss-btn {
-        transition: all 300ms ease-in-out 400ms;
-      }
 
 
   
@@ -653,9 +560,33 @@ h2{
   margin-right: 100px;
 }
 .key{
-  background:linear-gradient(rgb(246, 204, 211, 0.856), rgba(131, 53, 131, 0.856)); ;
+  background:linear-gradient(rgb(246, 204, 211, 0.856), rgba(131, 53, 131, 0.856));
 
 }
+
+/* NP Race page */ 
+.stopwatch-container{
+  background:linear-gradient(rgb(246, 204, 211, 0.856), rgba(131, 53, 131, 0.856));
+
+  text-align: center;
+  margin-bottom: 70px;
+}
+#display{
+  font-size: 50px;
+  color: ghostwhite;
+}
+#startStop{
+  font-size: 50px;
+  background-color: rgba(248, 248, 255, 0);
+  color: ghostwhite;
+  border: none;
+  outline: none;
+  padding-left:10px;
+  padding-right:10px;
+  margin-left: 7px;
+  margin-bottom: 60px;
+}
+
 
 
 
