--- a/style.css
+++ b/style.css
@@ -1,174 +1,659 @@
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+/* nav bar */
+html{
+    text-decoration: none;
+}
 body{
-    font-family: 'Rum Raisin', sans-serif;
-    background: #fafafa;
+  text-decoration: none;
+}
+ul{
+    list-style: none;
 }
 
-a,
-a:hover,
-a:focus{
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-/* Side Bar */
-
-.wrapper{
-    display: flex;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-#sidebar{
-    min-width: 250px;
-    max-width: 250px;
-    background:rgb(110, 110, 110,0.5);
-    color:black;
-    transition: all 0.3s;
-}
-#sidebar.active{
-    margin-left: -250px;
-}
-#sidebar .sidebar-header{
-    padding: 20px;
-    background: #474747;
-}
-#sidebar ul.components{
-    padding: 20px 0;
-    border-bottom: 1px solid  #47748b;
-}
-#sidebar ul p{
-    color: #fff;
-    padding: 10px;
-}
-#sidebar ul li a{ 
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-#sidebar ul li a:hover{
-    color: #444444;
-    background: #fff;
+a{
     text-decoration: none;
 }
-#sidebar ul li.active>a,
-a[arial-expanded="true"]{
-    color: #fff;
-    background: #575757;
-}
-a[data-toggle="collapse"]{
-    position: relative;
-}
-.dropdown-toggle::after{
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20%;
-    transform: translateY(-50%);
-}
-ul ul a{
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #fffdfd;
 
-}
-#sidebarCollapse{
-    background: none;
-    color: #444444;
-    border: none;
-}
-#content{
+header{
+    position: sticky;
+    top: 0px;
+    background-color: rgb(209, 159, 221);
     width: 100%;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
-}
-@media (max-width: 768px){
-    #sidebar { 
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #sidebarCollapse span{
-        display: none;
-    }
+    z-index: 1000;
 }
 
-/* login page */
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-button {
-  background-color:rgb(190, 173, 255);
-  border-radius: 15px 50px 30px;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: rgb(190, 173, 255);
-  cursor: pointer;
-  width: 100%;
-  text-decoration: none;
-}
-
-button:hover {
-  opacity: 0.8;
-  text-decoration: none;
-}
-
-
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-
-/* home page */
-.middle{
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.btn{
+section{
     position: relative;
-    display: block;
-    color:gray;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    margin: 30px 0;
-    border: 2px solid #ff7675;
-    padding: 14px 60px;
+    height: calc(100vh - 3rem);
+    width: 100%;
+    background: url('bg.jpg') no-repeat top center / cover;
+    overflow: hidden;
+}
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(242, 188, 255);
+}
+
+.container{
+    max-width: 65rem;
+    padding: 0 2rem;
+    margin: 0 auto;
+    display: flex;
+    position: relative;
+}
+
+.logo-container{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.nav-btn{
+    flex: 3;
+    display: flex;
+}
+
+.nav-links{
+    flex: 2;
+}
+
+.log-sign{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.logo{
+    color: #fff;
+    font-size: 1.1rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    line-height: 3rem;
+}
+
+.logo span{
+    font-weight: 300;
+}
+
+.btn{
+    display: inline-block;
+    padding: .5rem 1.3rem;
+    font-size: .8rem;
+    border: 2px solid #fff;
+    border-radius: 2rem;
+    line-height: 1;
+    margin: 0 .2rem;
+    transition: .3s;
     text-transform: uppercase;
 }
+
+.btn.solid, .btn.transparent:hover{
+    background-color: #fff;
+    color: rgb(242, 188, 255);
+}
+
+.btn.transparent, .btn.solid:hover{
+    background-color: transparent;
+    color: #fff;
+}
+
+.nav-links > ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-link{
+    position: relative;
+}
+
+.nav-link > a{
+    line-height: 3rem;
+    color: #fff;
+    padding: 0 .8rem;
+    letter-spacing: 1px;
+    font-size: .95rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: .5s;
+}
+
+.nav-link > a > i{
+    margin-left: .2rem;
+}
+
+.nav-link:hover > a{
+    transform: scale(1.1);
+}
+
+.dropdown{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 10rem;
+    transform: translateY(10px);
+    opacity: 0;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.dropdown ul{
+    position: relative;
+}
+
+.dropdown-link > a{
+    display: flex;
+    background-color: #fff;
+    color: rgb(199, 140, 214);
+    padding: .5rem 1rem;
+    font-size: .9rem;
+    align-items: center;
+    justify-content: space-between;
+    transition: .3s;
+}
+
+.dropdown-link:hover > a{
+    background-color:  rgb(199, 140, 214);
+    color: #fff;
+}
+
+.dropdown-link:not(:nth-last-child(2)){
+    border-bottom: 1px solid #efefef;
+}
+
+.dropdown-link i{
+    transform: rotate(-90deg);
+}
+
+.arrow{
+    position: absolute;
+    width: 11px;
+    height: 11px;
+    top: -5.5px;
+    left: 32px;
+    background-color: #fff;
+    transform: rotate(45deg);
+    cursor: pointer;
+    transition: .3s;
+    z-index: -1;
+}
+
+.dropdown-link:first-child:hover ~ .arrow{
+    background-color:  rgb(199, 140, 214)#3498db;
+}
+
+.dropdown-link{
+    position: relative;
+}
+
+.dropdown.second{
+    top: 0;
+    left: 100%;
+    padding-left: .8rem;
+    cursor: pointer;
+    transform: translateX(10px);
+}
+
+.dropdown.second .arrow{
+    top: 10px;
+    left: -5.5px;
+}
+
+.nav-link:hover > .dropdown,
+.dropdown-link:hover > .dropdown{
+    transform: translate(0, 0);
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.hamburger-menu-container{
+    flex: 1;
+    display: none;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.hamburger-menu{
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.hamburger-menu div{
+    width: 1.6rem;
+    height: 3px;
+    border-radius: 3px;
+    background-color: #fff;
+    position: relative;
+    z-index: 1001;
+    transition: .5s;
+}
+
+.hamburger-menu div:before,
+.hamburger-menu div:after{
+    content: '';
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    background-color: #fff;
+    border-radius: 3px;
+    transition: .5s;
+}
+
+.hamburger-menu div:before{
+    transform: translateY(-7px);
+}
+
+.hamburger-menu div:after{
+    transform: translateY(7px);
+}
+
+#check{
+    position: absolute;
+    top: 50%;
+    right: 1.5rem;
+    transform: translateY(-50%);
+    width: 2.5rem;
+    height: 2.5rem;
+    z-index: 90000;
+    cursor: pointer;
+    opacity: 0;
+    display: none;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div{
+    background-color: transparent;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:before{
+    transform: translateY(0) rotate(-45deg);
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:after{
+    transform: translateY(0) rotate(45deg);
+}
+
+@keyframes animation{
+    from{
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@media (max-width: 920px){
+    .hamburger-menu-container{
+        display: flex;
+    }
+
+    #check{
+        display: block;
+    }
+
+    .nav-btn{
+        position: fixed;
+        height: calc(100vh - 3rem);
+        top: 3rem;
+        left: 0;
+        width: 100%;
+        background-color:rgb(209, 159, 221);
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        overflow-x: hidden;
+        overflow-y: auto;
+        transform: translateX(100%);
+        transition: .65s;
+    }
+
+    #check:checked ~ .nav-btn{
+        transform: translateX(0);
+    }
+
+    #check:checked ~ .nav-btn .nav-link,
+    #check:checked ~ .nav-btn .log-sign{
+        animation: animation .5s ease forwards var(--i);
+    }
+
+    .nav-links{
+        flex: initial;
+        width: 100%;
+    }
+
+    .nav-links > ul{
+        flex-direction: column;
+    }
+
+    .nav-link{
+        width: 100%;
+        opacity: 0;
+        transform: translateY(15px);
+    }
+
+    .nav-link > a{
+        line-height: 1;
+        padding: 1.6rem 2rem;
+    }
+
+    .nav-link:hover > a{
+        transform: scale(1);
+        background-color:rgb(227, 135, 250);
+    }
+
+    .dropdown, .dropdown.second{
+        position: initial;
+        top: initial;
+        left: initial;
+        transform: initial;
+        opacity: 1;
+        pointer-events: auto;
+        width: 100%;
+        padding: 0;
+        background-color: rgb(147, 82, 163);
+        display: none;
+    }
+    
+    .nav-link:hover > .dropdown,
+    .dropdown-link:hover > .dropdown{
+        display: block;
+    }
+
+    .nav-link:hover > a > i,
+    .dropdown-link:hover > a > i{
+        transform: rotate(360deg);
+    }
+
+    .dropdown-link > a{
+        background-color: transparent;
+        color: #fff;
+        padding: 1.2rem 2rem;
+        line-height: 1;
+    }
+
+    .dropdown.second .dropdown-link > a{
+        padding: 1.2rem 2rem 1.2rem 3rem;
+    }
+
+    .dropdown.second .dropdown.second .dropdown-link > a{
+        padding: 1.2rem 2rem 1.2rem 4rem;
+    }
+
+    .dropdown-link:not(:nth-last-child(2)){
+        border-bottom: none;
+    }
+
+    .arrow{
+        z-index: 1;
+        background-color: rgb(222, 162, 236);
+        left: 10%;
+        transform: scale(1.1) rotate(45deg);
+        transition: .5s;
+    }
+
+    .nav-link:hover .arrow{
+        background-color: rgb(227, 135, 250);
+    }
+
+    .dropdown .dropdown .arrow{
+        display: none;
+    }
+
+    .dropdown-link:hover > a{
+        background-color: rgb(212, 137, 231);
+    }
+
+    .dropdown-link:first-child:hover ~ .arrow{
+        background-color: rgb(227, 135, 250);
+    }
+
+    .nav-link > a > i{
+        font-size: 1.1rem;
+        transform: rotate(-90deg);
+        transition: .7s;
+    }
+
+    .dropdown i{
+        font-size: 1rem;
+        transition: .7s;
+    }
+
+    .log-sign{
+        flex: initial;
+        width: 100%;
+        padding: 1.5rem 1.9rem;
+        justify-content: flex-start;
+        opacity: 0;
+        transform: translateY(15px);
+    }
+
+}
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+       #map {
+        height: 100%;
+      }
+
+      /* Optional: Makes the sample page fill the window. */
+     
+      #map{
+        padding-bottom: 50px;
+      }
+
+
+
+  
+/* messaging page */
+      #messages{
+        list-style-type: none;
+        color: ghostwhite;
+      }
+      .friend{
+        background-color: rgba(0, 0, 0, 0);
+        color:  rgb(242, 188, 255);
+        border: none;
+        outline: none;
+        transition: 0.3s ease-in-out;
+      }
+      .friend:hover{
+        color: rgb(210, 69, 245);
+      }
+      .text{
+        background-size: auto;
+        background-color: rgba(0, 0, 0, 0.63);
+        margin-left: 0;
+        padding: 15px;
+        width:200px;
+        margin-bottom: 10px;
+        border-radius: 12px;
+      }
+      .delete{
+        background-color: rgba(60, 90, 77, 0);
+        color:  rgb(60, 224, 200);
+        border: none;
+        outline: none;
+        transition: 0.3s ease-in-out;
+      }
+      .delete:hover{
+        color: rgb(72, 133, 124);
+      }
+      #messagebox{
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: "Poppins", "sans-serif";
+    
+    }
+    
+    #chat-room{ 
+      background-color: rgba(175, 255, 242, 0.671) ;
+      text-align: center;
+      font-family: 'Lobster', cursive;
+      font-size: 35px;
+      color: rgb(0, 78, 61);
+    }
+    #message{
+      background-color: rgba(253, 253, 253, 0.616);
+      border: none;
+      outline: none;
+      padding: 5px;
+      padding-left: 10px;
+      border-radius: 15px;
+      width: 250px;
+      margin-top: 5px;
+      margin-left: 30px;
+      margin-bottom: 5px;
+      font-family: 'Lobster', cursive;
+      
+    }
+    #send{
+      background-color: rgb(0, 78, 61);
+      color: ghostwhite;
+      border: none;
+      outline: none;
+      border-radius: 50%;
+      padding: 5px;
+      padding-left:10px;
+      padding-right:10px;
+      margin-left: 7px;
+      margin-bottom: 5px;
+    }
+    #find-friends{
+      background-color: rgb(0, 78, 61);
+      color: ghostwhite;
+      border: none;
+      outline: none;
+      border-radius: 50%;
+      padding: 5px;
+      padding-left:12px;
+      padding-right:12px;
+      margin-left: 7px;
+      margin-bottom: 5px;
+    }
+
+/* find friends page */
+li{
+  list-style-type: none;
+
+}
+h2{
+  font-size: 20px;
+  font-family: 'Lobster', cursive;
+  padding: 5px;
+  color:rgb(86, 10, 88);
+}
+.legend{
+  padding: 10px;
+  color:rgb(255, 255, 255);
+}
+.tea{
+  position: absolute;
+  margin-right: 100px;
+}
+.key{
+  background:linear-gradient(rgb(246, 204, 211, 0.856), rgba(131, 53, 131, 0.856));
+
+}
+
+/* NP Race page */ 
+.stopwatch-container{
+  background:linear-gradient(rgb(246, 204, 211, 0.856), rgba(131, 53, 131, 0.856));
+
+  text-align: center;
+  margin-bottom: 70px;
+}
+#display{
+  font-size: 50px;
+  color: ghostwhite;
+}
+#startStop{
+  font-size: 50px;
+  background-color: rgba(248, 248, 255, 0);
+  color: ghostwhite;
+  border: none;
+  outline: none;
+  padding-left:10px;
+  padding-right:10px;
+  margin-left: 7px;
+  margin-bottom: 60px;
+}
+
+/* scoreboard */
+#timing{
+  margin:0%;
+}
+main{
+  background: rgb(242, 188, 255);
+}
+.titles{
+  font-size: 20px;
+  background-color: rgba(175, 255, 242, 0.671);
+  font-family: 'Lobster', cursive;
+  color: rgb(0, 78, 61);
+}
+.fifth{
+  background: rgb(206, 159, 218);
+  color: ghostwhite;
+}
+.forth{
+  background: rgb(183, 144, 194);
+  color: ghostwhite;
+}
+.third{
+  background: rgb(140, 109, 148);
+  color: ghostwhite;
+}
+.second{
+  background: rgb(109, 84, 116);
+  color: ghostwhite;
+}
+.first{
+  background: rgb(89, 69, 95);
+  color: ghostwhite;
+}
+
+/* home page donut background */
+.donut {
+  animation: rotation 2s infinite linear;
+  padding: 84px;
+  margin-top: 40%;
+}
+.donut-text{
+  padding-top: 0%;
+  padding-left: 35px;
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
